--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
       <script>
         window.currentUser = { 
           "id": <%= current_user.id %>,
-          "username": "<%= current_user.username %>",
+          "name": "<%= current_user.name %>",
           "email": "<%= current_user.email %>"
           };
       </script>
+      <% end %>
   </head>
 
   <body>
