--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+ 
+header {
+    /* display: flow-root; */
+} 
+
+
+#logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:180px;
+  height:20px;
+ }
+
+ 
