--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,7 +149,8 @@
 .login-form-container {
     padding-right: 3rem !important;
     padding-left: 3rem !important;
-    padding: 20px;
+    padding: 10px;
     font-size: 100%;
-    display: block;
+    // display: block;
+    // margin: 200px;
 }
