fix input border color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -129,9 +129,9 @@ html {
 }
  
 .login-input:focus {
-    // border-style: solid;
+    border-style: solid;
     border-color: #009E74;;
-    // outline: none;
+    outline: none;
 }
 
 .login-input {
