--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -7,11 +7,10 @@
   max-width: 1400px;
   min-width: 750px;
   justify-content: space-between;
-  max-width: 1366px;
   margin-left: auto;
   margin-right: auto; 
-  padding-left: 290px;
-  padding-right: 290px;
+  padding-left: 380px;
+  padding-right: 380px;
 }
 
 .category-button {
@@ -25,7 +24,34 @@
 .category-button:hover {
     color: #034752;
     text-decoration: underline;
+    text-shadow: 0px 0px 0px rgba(0,0,0,0);
     font-weight: 500;
     transition: height 0.5s, opacity 0.5s, transform 0.7s, color 0.3s;
     transform: translateY(0px);
+}
+
+.category-name {
+    font-family: "Cooper Light", Georgia, Times, "Times New Roman", serif;
+    color: #282828;
+    font-size: 2rem;
+    /* line-height: 3rem; */
+    display: block;
+    margin-block-start: 1em;
+    /* margin-block-end: 1em; */
+    /* margin-inline-start: 0px;
+    margin-inline-end: 0px; */
+    padding-left: 90px;
+    padding-right: 60px;
+    padding-top: 30px;
+    font-weight: 100;
+}
+
+.category-description {
+    font-family: "Cooper Light", Georgia, Times, "Times New Roman", serif;;
+    padding-left: 90px;
+    padding-right: 60px;
+    padding-top: .5rem;
+    font-size: 17px;
+    font-weight: 200;
+    color: #656969;
 }
