add complete featured project

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
 html {
     font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.footer{
+    padding-top: 50px;
+}
  
 .nav {
     position: relative;
