add show page dates

--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -106,3 +106,10 @@
     color: #282828;
 }
 
+.project-body{
+    padding-left: 150px;
+    color: #282828;
+    font-size: 16px;
+    margin: 0px 0px 30px;
+}
+
