--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,6 +233,11 @@ html {
     border: none;
 }
 
+.header-button:hover {
+    color: #2752ff;
+    text-decoration: underline;
+} 
+
 .session-errors {
     color: red;
     font-size: 12px;
