--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -4,8 +4,8 @@
   margin-top: 3rem;
   border-bottom: 1px solid #E8E8E8;    
   font-size: 16px;
-  max-width: 1400px;
-  min-width: 750px;
+  max-width: 800px;
+  min-width: 550px;
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto; 
@@ -65,6 +65,7 @@
     line-height: 1.8rem;
     padding-left: 150px;
     padding-top: 50px;
+    padding-bottom: 2px;
 
 }
 
@@ -79,7 +80,6 @@
     height: 550px;
     width: 650px; 
     box-sizing: border-box;
-
 }
 
 .featured-name {
@@ -113,3 +113,102 @@
     margin: 0px 0px 30px;
 }
 
+.recommended-text {
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #656969;
+    font-size: 15px;
+    line-height: 1.8rem;
+    padding-right: 400px;
+    float: right;
+    bottom: 20px;
+    position: relative;
+}
+
+.recommended-container {
+    position: absolute;
+    height: 550px;
+    width: 370px;
+    right: 158px;
+    /* border: 1px solid blue; */
+    border-bottom: 1.25px solid #E8E8E8;
+}
+
+.rec-project-container {
+    /* border: 1px dotted blue; */
+    height: 150px;
+    padding-bottom: 30px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: relative;
+    
+}
+
+.recommended-pic {
+     height: 100px;
+     width: 170px;
+     padding-left: 10px;
+}
+
+.rec-project-name {
+    position: absolute;
+    right: 28px;
+    top: 3px;
+    font-size: 14px;
+    
+}
+
+.rec-project-name2 {
+    position: absolute;
+    right: 28px;
+    top: 3px;
+    font-size: 14px;
+}
+
+.rec-project-name3 {
+    position: absolute;
+    right: 28px;
+    top: 3px;
+    font-size: 14px;
+}
+
+.line-1 {
+    border-bottom: 1.25px solid #E8E8E8;
+    position: absolute;
+    width: 370px;
+    top: 140px;
+}
+
+.line-2 {
+    border-bottom: 1.25px solid #E8E8E8;
+    position: absolute;
+    width: 370px;
+    top: 320px;
+}
+
+.rec-creator {
+    position: absolute;
+    right: 124px;
+    top: 25px;
+    font-size: 12px;
+    font-weight: 100;
+    color: #282828;
+}
+
+.rec-creator2 {
+    position: absolute;
+    right: 124px;
+    top: 25px;
+    font-size: 12px;
+    font-weight: 100;
+    color: #282828;
+}
+
+.rec-creator3 {
+    position: absolute;
+    right: 124px;
+    top: 25px;
+    font-size: 12px;
+    font-weight: 100;
+    color: #282828;
+}
