--- a/app/assets/stylesheets/projectshow.css
+++ b/app/assets/stylesheets/projectshow.css
@@ -49,7 +49,7 @@
 }
 
 .project-body {
-    width: 800px;
+    width: 650px;
     line-height: 1.6;
 }
 
@@ -102,4 +102,53 @@
     position: absolute;
     bottom: 0px;
     padding-bottom: 10px;
+}
+
+.pledge-container {
+    border: #E8E8E8 1.50px solid;
+    width: 320px;
+    height: 245px;
+    position: absolute;
+    right: 210px;
+    /* bottom: 0px; */
+    padding-bottom: 40px;
+    top: 840px;
+}
+
+.pledge-header {
+    color: #3b3b3b;
+    font-size: 18px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.4;
+    margin-block-start: 0.83em;
+    padding-left: 20px;
+}
+.pledge-container:hover {
+    background: rgba(0,158,116,0.9);
+    cursor: pointer;
+}
+.reward {
+    color: #3b3b3b;
+    font-size: 16px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.4;
+    margin-block-start: 0.83em;
+    padding-left: 20px;
+}
+
+.reward-description {
+    color: #3b3b3b;
+    font-size: 15px;
+    font-weight: 100;
+    padding-left: 20px;
+    padding-top: 4px;
+}
+
+.estimated-delivery {
+    color: #3b3b3b;
+    padding-left: 20px;
+    font-size: 15px;
+    font-weight: 100;
+    position: absolute;
+    bottom: 20px;
 }
