--- a/app/assets/stylesheets/projectshow.scss
+++ b/app/assets/stylesheets/projectshow.scss
@@ -33,7 +33,8 @@
 .project-pic {
     padding-left: 150px;
     height: 550px;
-    width: 800px; 
+    // width: 800px; 
+    width: 50%;
     box-sizing: border-box;
     padding-bottom: 20px;
     /* border-bottom: #E8E8E8 1.25px solid; */
@@ -49,7 +50,8 @@
 }
 
 .project-body {
-    width: 650px;
+    // width: 650px;
+    width: 42%;
     line-height: 1.6;
 }
 
